adding google analytics and also meta tags

--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <meta
+      name="description"
+      content="The best website to begin learning about Solana and everything you can do here"
+    />
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>Solana Tourism</title>
+    <title>Solana Tourism • Learn about Solana</title>
   </head>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-9X3EBH2ED0"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-9X3EBH2ED0");
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
