adding meta tag to track searches

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       name="description"
       content="The best website to begin learning about Solana and everything you can do here"
     />
+    <meta
+      name="google-site-verification"
+      content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
+    />
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
