adding twitter link preview

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
       name="google-site-verification"
       content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
     />
+    <meta
+      name="google-site-verification"
+      content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@SolanaTourism" />
+    <meta name="twitter:creator" content="@SolanaTourism" />
+    <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
+    <meta
+      name="twitter:description"
+      content="Curated tour guides introducing newcomers to the best projects on Solana"
+    />
+    <meta
+      name="twitter:image"
+      content="https://solanatourism.com/src/assets/twitterLinkPreview.png"
+    />
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
