trying to fix the twitter image

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       name="twitter:description"
       content="Curated tour guides introducing newcomers to the best projects on Solana"
     />
-    <meta
-      name="twitter:image"
-      content="https://solanatourism.com/src/assets/twitterLinkPreview.png"
-    />
+    <meta name="twitter:image" content="https://i.imgur.com/73HbeI0.png" />
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
