adding OG tags for better social media sharing

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
       content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
     />
 
+    <meta
+      property="og:title"
+      content="Solana Tourism — Best place to begin learning about Solana"
+    />
+    <meta
+      property="og:description"
+      content="Curated tour guides introducing newcomers to the best projects on Solana"
+    />
+    <meta property="og:image" content="https://i.imgur.com/73HbeI0.png" />
+
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="500" />
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@SolanaTourism" />
     <meta name="twitter:creator" content="@SolanaTourism" />
