--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="https://i.imgur.com/73HbeI0.png" />
     <meta name="twitter:site" content="@SolanaTourism" />
     <meta name="twitter:creator" content="@SolanaTourism" />
     <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
