--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
       name="description"
       content="The best website to begin learning about Solana and everything you can do here"
     />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
+    <meta name="twitter:creator" content="@SolanaTourism" />
+    <meta name="twitter:image" content="https://i.imgur.com/73HbeI0.png" />
+
     <meta
-      name="google-site-verification"
-      content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
+      name="twitter:description"
+      content="Curated tour guides introducing newcomers to the best projects on Solana"
     />
+
     <meta
       name="google-site-verification"
       content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
@@ -32,16 +39,6 @@
 
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
-
-    <meta name="twitter:card" content="https://i.imgur.com/73HbeI0.png" />
-    <meta name="twitter:site" content="@SolanaTourism" />
-    <meta name="twitter:creator" content="@SolanaTourism" />
-    <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
-    <meta
-      name="twitter:description"
-      content="Curated tour guides introducing newcomers to the best projects on Solana"
-    />
-    <meta name="twitter:image" content="https://i.imgur.com/73HbeI0.png" />
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
