adding metadata for each route

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <meta
+    <!-- <meta
       name="description"
       content="The best website to begin learning about Solana and everything you can do here"
-    />
+    /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
@@ -42,7 +42,7 @@
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>Solana Tourism • Learn about Solana</title>
+    <!-- <title>Solana Tourism • Learn about Solana</title> -->
   </head>
   <script
     async
