--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
       content="The best website to begin learning about Solana and everything you can do here"
     /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Solana Tourism — Learn about Solana" />
-    <meta name="twitter:creator" content="@SolanaTourism" />
+    <meta name="twitter:creator" content="@SolanaTourism" /> -->
     <meta name="twitter:image" content="https://i.imgur.com/73HbeI0.png" />
 
-    <meta
+    <!-- <meta
       name="twitter:description"
       content="Curated tour guides introducing newcomers to the best projects on Solana"
-    />
+    /> -->
 
     <meta
       name="google-site-verification"
       content="Shmsy5RUtS1gN28dAxTWOFXw1j9KcL7HcmjbIshcqY0"
     />
 
-    <meta
+    <!-- <meta
       property="og:title"
       content="Solana Tourism — Best place to begin learning about Solana"
     />
     <meta
       property="og:description"
       content="Curated tour guides introducing newcomers to the best projects on Solana"
-    />
+    /> -->
     <meta property="og:image" content="https://i.imgur.com/73HbeI0.png" />
 
     <meta property="og:image:width" content="1000" />
